@@ -264,6 +264,9 @@ namespace Win32xx
 
 		switch (uMsg)
 	    {
+		case UWM_CLEANUPTEMPS:
+			GetApp()->CleanupTemps();
+			break;
 	    case WM_INITDIALOG:
 			{
 				// Center the dialog
@@ -342,8 +345,9 @@ namespace Win32xx
 
 		case WM_ERASEBKGND:
 			{
-				CDC* pDC = FromHandle((HDC)wParam);
-				BOOL bResult = OnEraseBkgnd(pDC);
+				CDC dc((HDC)wParam);
+				BOOL bResult = OnEraseBkgnd(&dc);
+				dc.DetachDC();
 				if (bResult) return TRUE;
 			}
 			break;
