@@ -222,6 +222,9 @@ namespace Win32xx
 
 		switch (uMsg)
 	    {
+		case UWM_CLEANUPTEMPS:
+			GetApp()->CleanupTemps();
+			break;
 	    case WM_INITDIALOG:
 		    return OnInitDialog();
 
@@ -289,8 +292,9 @@ namespace Win32xx
 			
 		case WM_ERASEBKGND:
 			{
-				CDC* pDC = FromHandle((HDC)wParam);
-				BOOL bResult = OnEraseBkgnd(pDC);
+				CDC dc((HDC)wParam);
+				BOOL bResult = OnEraseBkgnd(&dc);
+				dc.DetachDC();
 				if (bResult) return TRUE;
 			}
 			break;
